[tool.poetry]
name = "std"
version = "0.1.0"
description = ""
authors = ["Ivan Kovtun <ivan.kovtun@capgemini.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pika = "^1.3.2"
diffusers = "^0.29.0"
transformers = "4.36.0"
torch = "2.1.1"
accelerate = "^0.31.0"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = [
    "F",  # Pyflakes: general errors
    "E",  # PEP8: style errors
    "W",  # PEP8: warnings
    "C90",  # Miscellaneous: custom checks
    "F401", # Unused import
    "F841", # Local variable assigned but never used
]

ignore = [
    "E501",  # Line too long
]